@@ -3,6 +3,8 @@ Backported the new Mp3 file detection.
 Fixed cddb local file naming for disc ids with less than 8 digits.
 Properly disable all buttons in the copy dialogs if no writer is installed and only-create-image
 	is selected.
+Fixed VideoDVD on-the-fly writing problem.
+Select appropriate raw writing mode if raw96r is not supported.
 
 0.11.12
 Another qt 3.1 compile fix
